--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -30,3 +30,11 @@
     opacity: 0;
     margin-top: 0;
 }
+
+.card-list__loading-result {
+    margin-top: 30px;
+    text-align: center;
+    font-size: 20px;
+    color: #7a25d7;
+    font-weight: bold;
+}
